--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@heroicons/react": "^2.0.14",
+    "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^2.9.11",
+    "@material-tailwind/react": "^2.0.0",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
@@ -24,6 +25,7 @@
     "moment": "^2.29.4",
     "next": "13.0.5",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
