--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^2.9.11",
     "@material-tailwind/react": "^2.0.0",
+    "apexcharts": "^3.40.0",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
