--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^2.9.11",
     "@material-tailwind/react": "^2.0.0",
+    "@tailwindcss/forms": "^0.5.3",
     "apexcharts": "^3.40.0",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
     "html2pdf.js": "^0.10.1",
     "jotai": "^2.0.3",
     "js-cookie": "^3.0.1",
@@ -29,13 +31,16 @@
     "react-apexcharts": "^1.4.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
+    "tailwind-datepicker-react": "^1.3.0",
     "usehooks-ts": "2.6.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/dropzone": "^5.7.4",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
