--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
+    "google-map-react": "^2.2.0",
     "html2pdf.js": "^0.10.1",
     "jotai": "^2.0.3",
     "js-cookie": "^3.0.1",
@@ -32,6 +33,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-geocode": "^0.2.3",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
