--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "next": "13.0.5",
+    "pdfmake": "^0.2.7",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-cookie": "^4.1.1",
