--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apexcharts": "^3.40.0",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "google-map-react": "^2.2.0",
@@ -35,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
