--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 NEXTAUTH_SECRET="bxHCQtkX6C6aj9WBZ2T2wMRZ0i4Dumtl"
-BACKEND_SERVER_URL="https://accounting-software-backend.vercel.app/api"
+BACKEND_SERVER_URL="http://192.168.2.4:4000/api"
