--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "set NODE_ENV=development&& next dev",
+    "build": "set NODE_ENV=production&& next build",
+    "start": "set NODE_ENV=production&& next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "google-map-react": "^2.2.0",
